ホーム画面実装

--- a/app/src/main/res/layout/fragment_grocery_home.xml
+++ b/app/src/main/res/layout/fragment_grocery_home.xml
@@ -23,12 +23,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/search_recipe_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@android:color/holo_blue_light"
+        android:backgroundTint="@color/colorPrimary"
         android:text="レシピを探す"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
