--- a/app/src/main/res/layout/fragment_grocery_home.xml
+++ b/app/src/main/res/layout/fragment_grocery_home.xml
@@ -8,6 +8,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="0dp"
         android:layout_height="56dp"
+        android:background="@android:color/white"
+        android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,6 +22,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
