--- a/app/src/main/res/layout/fragment_grocery_page.xml
+++ b/app/src/main/res/layout/fragment_grocery_page.xml
@@ -6,6 +6,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
+        android:paddingHorizontal="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
