--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -11,6 +11,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recipe_recycler_view"
+            android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
