--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:padding="8dp"
+    android:background="?android:selectableItemBackground"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -18,7 +20,8 @@
         android:id="@+id/recipe_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
+        android:maxLines="2"
+        android:layout_marginTop="8dp"
         android:text="レシピ名"
         android:textColor="@android:color/black"
         android:textSize="14sp"
@@ -29,7 +32,7 @@
     <androidx.appcompat.widget.AppCompatRatingBar
         android:id="@+id/difficulty_rate_bar"
         android:layout_width="150dp"
-        android:layout_marginTop="8dp"
+        android:padding="0dp"
         android:layout_height="40dp"
         android:isIndicator="true"
         android:max="3"
