--- a/app/src/main/res/layout/item_stateful_button.xml
+++ b/app/src/main/res/layout/item_stateful_button.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:padding="6dp"
     android:layout_height="wrap_content">
 
     <com.google.android.material.button.MaterialButton
