--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="8dp"
+    android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground"
-    android:layout_height="wrap_content">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/thumbnail"
@@ -20,8 +20,8 @@
         android:id="@+id/recipe_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="2"
         android:layout_marginTop="8dp"
+        android:maxLines="2"
         android:text="レシピ名"
         android:textColor="@android:color/black"
         android:textSize="14sp"
@@ -32,11 +32,11 @@
     <androidx.appcompat.widget.AppCompatRatingBar
         android:id="@+id/difficulty_rate_bar"
         android:layout_width="150dp"
-        android:padding="0dp"
         android:layout_height="40dp"
         android:isIndicator="true"
         android:max="3"
         android:numStars="3"
+        android:padding="0dp"
         android:scaleX=".5"
         android:scaleY=".5"
         android:transformPivotX="0dp"
